[package]
name = "rusty-pew-pew"
version = "0.1.0"
authors = ["Blazej Bucko <blazej.bucko@gmail.com>"]

[dependencies]
#gfx = "0.17.1"
cgmath = "0.16.1"
xml-rs = "0.8.0"
inflate = "0.4.3"
base64 = "0.9.2"
lazy_static = "1.1.0"

[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["image"]


